--- a/src/All-Css-Files/addtocart.css
+++ b/src/All-Css-Files/addtocart.css
@@ -1,10 +1,9 @@
-
-
 .flex {
   display: flex;
   justify-content: space-around;
   padding-top: 20px;
-  
+  height: 100%;
+  /* background-color: antiquewhite; */
 }
 
 .main_addtocard_div {
@@ -15,7 +14,6 @@
   width: 60%;
   background-color: white;
   gap: 20px;
-  /* border: 1px solid black; */
 }
 
 .qty_container {
@@ -29,9 +27,10 @@
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  border: 1px solid black;
-  box-shadow: -1px 2px;
-  
+  /* border: 1px solid black; */
+  box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 1px 0px inset,
+    rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
 }
 .product_details {
   display: flex;
@@ -57,13 +56,10 @@
   flex-direction: column;
   align-items: center;
   position: sticky;
-  top: 20px;
-  border: 1px solid rgba(141, 134, 134, 0.187);
+  top: 5rem;
+  background-color: white;
   width: 30%;
-  height: 25%;
-  box-shadow: 2px 3px;
+  height: 30%;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
 }
-/* .delete_icon{
-  display: flex;
-  justify-content: end;
-} */
+
