--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,6 @@
-/* /* .navigation_bar{
-    display: flex;
-    width: 100vw;
-    height: 5rem;
-    background-color: aqua;
-}
-.main{
-    display: flex;
-    width: 30%;
-    justify-content: space-around;
-    align-items: center;
-} */
 .Navigation-bar {
+  position: sticky;
+  top: 0px;
   display: flex;
   background-color: rgb(22, 104, 218);
   justify-content: space-between;
@@ -36,79 +26,3 @@
   color: white;
   text-decoration: none;
 }
-/*.heading{
-  text-align: center;
-}
-  
-  
-.main_container{
-  border: 1px solid black;
-  margin: auto;
-  border-radius: 10px;
-  justify-content:center;
-  align-items: center;
-  flex-direction: column;
-  background-color: aliceblue;
-  width: 351px;
-  height:auto;
-
-}
-.login_form{
-  border: 1px solid black;
-  margin: auto;
-  border-radius: 10px;
-  flex-direction: column;
-  background-color: aliceblue;
-  width: 351px;
-  height:298px;
-}
-.local_container{
-  padding: 5px;
-  margin: 30px;
-  width: 280px;
-}
-.form_container{
-  padding: 5px;
-  margin: 30px;
-  width: 280px;
-  height: 161px;
-}
-li{
-  list-style: none;
-}
-.input_tag{
-  width: 15rem;
-  height: 25px;
-}
- 
-
-.front_page{
- width: 100%;
- height: 100vh;
-}
-.card_container{
-  display: flex;
-  flex-direction: column;
-  align-items:center ;
-  justify-content: center;
-  padding: 10px;
-  margin: 10px;
-  border: 2px solid black;
-  width: 250px;
-  height: auto;
-  border-radius: 8px;
-  float: left;
-  overflow: hidden;
-}
-
-input{
-  margin: 15px;
-  width: 15rem;
-  height:25px ;
-}
-
-.button_from_nav{
-  height: 40px;
-}
-  
- */
