--- a/src/All-Css-Files/singupForm.css
+++ b/src/All-Css-Files/singupForm.css
@@ -2,16 +2,25 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 35rem;
+
+  width: 100vw;
+  height: 100vh;
+  background-color: white;
 }
+
+.box2 {
+  width: 350px;
+  height: 500px;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
 .input_filed {
   display: flex;
   flex-direction: column;
-  width: 300px;
-  /* height: 73%; */
-gap: 15px;
+  gap: 15px;
   padding: 20px;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
   font-size: larger;
 }
+
