--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
   background-color: rgb(22, 104, 218);
   justify-content: space-between;
   align-items: center;
-
+  z-index: 1;
   width: 100%;
   height: 4rem;
 }
