--- a/src/All-Css-Files/home.css
+++ b/src/All-Css-Files/home.css
@@ -2,14 +2,16 @@
   display: flex;
   height: 100%;
   background-color: antiquewhite;
+margin: 20px;
+gap: 10px;
 }
 
 .front_page {
   display: flex;
   flex-wrap: wrap;
   width: 100%;
-  gap: 10px;
-  margin: 20px;
+  /* gap: 10px;
+  margin: 20px; */
   align-items: center;
   justify-content: space-around;
   background-color:  antiquewhite;
