--- a/src/All-Css-Files/home.css
+++ b/src/All-Css-Files/home.css
@@ -1,17 +1,19 @@
+body{
+  margin:0 ;
+  padding: 0;
+}
 .main {
   display: flex;
-  height: 100%;
+  height: 90%;
   background-color: antiquewhite;
-margin: 20px;
-gap: 10px;
+
 }
 
 .front_page {
   display: flex;
   flex-wrap: wrap;
-  width: 100%;
-  /* gap: 10px;
-  margin: 20px; */
+  row-gap: 20px;
+  margin: 20px;
   align-items: center;
   justify-content: space-around;
   background-color:  antiquewhite;
@@ -44,7 +46,7 @@ gap: 10px;
 .second-nav-bar{
   display: flex;
   height: 4rem;
-  width: 100vw;
+  width: 95vw;
  
 }
 .right-side-nav{
